--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,300;0,400;0,700;1,400&display=swap"
+      href="https://selfcare.pagopa.it/assets/font/selfhostedfonts.css"
       rel="stylesheet"
     />
   </head>
