using index.css from common library

--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
 
     <link href="https://selfcare.pagopa.it/assets/font/selfhostedfonts.css" rel="stylesheet" />
   </head>
-  <body style="margin: 0px">
+  <body>
     <noscript>Abilita JavaScript per utilizzare quest'applicazione</noscript>
     <div id="root"></div>
   </body>
